// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements RequestBodyElement given payload containing nested Selector Objects should refract Selector Object shaped values to SelectorElement 1`] = `
(RequestBodyElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SelectorElement
          (MemberElement
            (StringElement)
            (StringElement))
          (MemberElement
            (StringElement)
            (StringElement))
          (MemberElement
            (StringElement)
            (StringElement))))
      (MemberElement
        (StringElement)
        (ArrayElement
          (SelectorElement
            (MemberElement
              (StringElement)
              (StringElement))
            (MemberElement
              (StringElement)
              (StringElement))
            (MemberElement
              (StringElement)
              (StringElement)))
          (ObjectElement
            (MemberElement
              (StringElement)
              (StringElement)))))
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements RequestBodyElement should refract to semantic ApiDOM tree 1`] = `
(RequestBodyElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (PayloadReplacementElement
        (MemberElement
          (StringElement)
          (StringElement))
        (MemberElement
          (StringElement)
          (StringElement))))))
`;
